Thu Jan 13 18:58:03 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htnet/HtFile.h, htnet/HtFile.cc: New Transport classes
	contributed by Alexis Mikhailov to allow file:// access.

	* htdig/Document.h, htdig/Document.cc: Add logic to call HtFile
	objects for URLs.

	* htcommon/URL.cc: Don't remove a trailing index.html (removeIndex)
	if the URL is a file://URL.

Thu Jan 13 18:49:41 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* contrib/conv_doc.pl, contrib/parse_doc.pl: Replace "break" by
	"last" for correct Perl syntax and additional cleanups and
	simplifications as contributed by Warren Jones.

Thu Jan 13 18:42:29 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htword/WordType.h, htword/WordType.cc: Implementation of new
	methods IsDigit() and IsCntrl() as contributed by Marc Pohl
	<marc.pohl@wdr.de>. Fixes some problems with 8-bit characters.

Thu Jan 13 17:17:47 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* ChangeLog.0, configure, configure.in, htfuzzy/Endings.cc,
	htlib/String.cc, htlib/Configuration.cc,
	htlib/QuotedStringList.cc, htlib/regex.c, htcommon/defaults.cc,
	htdig/ExternalParser.cc, htdig/Retriever.h, htsearch/Display.cc,
	include/htconfig.h.in installdir/htdig.conf: Merge in changes from
	3.1.x releases.

	* htdoc/: Merge in documentation changes from 3.1.x releases.

Thu Jan 13 20:12:42 2000  Loic Dachary  <loic@ceic.com>

	* htword/WordList.cc (Walk): close the cursor before returning. If
	  not doing that the cursor might be closed after the database is
	  closed, leading to double free of the cursor. Bad bug.

Thu Jan 13 13:23:17 2000  Loic Dachary  <loic@ceic.com>

	* htword/WordContext.h (class WordContext): simplifies a lot. WordContext is
	  no longer a repository for pointers of class instances. Only a place to call
	  Initialize for classes that have a single instance.

	* htlib/HtWordType.cc: added to include definition of functions shortcuts for
	  WordType.
